--- a/src/styles/appStyles.css
+++ b/src/styles/appStyles.css
@@ -1,114 +1,7 @@
-/* @font-face {
-  font-family: "chivo";
-  src: url("../../public/fonts/Chivo-Black.ttf") format("ttf");
+html,
+body {
+  height: 100%;
 }
-
-@font-face {
-  font-family: "chivo";
-  src: url("../../public/fonts/Chivo-Regular.ttf") format("ttf");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "chivo";
-  src: url("../../public/fonts/Chivo-BoldItalic.ttf") format("ttf");
-  font-weight: bold;
-  font-style: italic;
-} */
-.body {
-  display: grid;
-  grid-template-areas:
-    "header header header header"
-    "title title title title"
-    "products products products products"
-    "services services services services"
-    "contact contact contact contact"
-    "footer footer footer footer";
-  /* 
-  grid-template-columns: repeat(12, 1fr); */
-  grid-template-rows: 300px 300px 900px 500px 350px 200px;
-}
-
-/* header / nav*/
-.header {
-  font-family: "Chivo", sans-serif;
-  grid-area: header;
-  display: flex;
-  justify-content: space-between;
-  padding: 50px 50px 50px 50px;
-}
-
-.header-nav-container {
-  width: 500px;
-}
-
-.header-nav-items {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header-nav-container .header-nav-items li {
-  list-style: none;
-  display: inline-block;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  font-weight: normal;
-  font-style: normal;
-  letter-spacing: 3px;
-  font-weight: 400;
-}
-
-.header-logo-container h1 {
-  font-size: 3rem;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-}
-
-/* japanese title */
-
-.title {
-  padding-top: 10rem;
-  grid-area: title;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.title-container-1 h2 {
-  font-size: 6rem;
-  font-weight: 400;
-}
-
-.title-container-2 {
-  padding-top: 40px;
-  width: 1000px;
-}
-
-.title-container-2 .title-container-2-bio {
-  font-size: 2rem;
-  letter-spacing: 3px;
-  line-height: 40px;
-}
-
-.products {
-  grid-area: products;
-  display: grid;
-
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 500px 500px;
-  grid-gap: 10px;
-  grid-auto-flow: dense;
-  overflow: hidden;
+.container {
   border: 2px solid red;
 }
-.services {
-  grid-area: services;
-}
-
-.contact {
-  grid-area: cotact;
-}
-.footer {
-  grid-area: footer;
-}
-/*  header */
