--- a/src/components/contact/formStyles.css
+++ b/src/components/contact/formStyles.css
@@ -72,3 +72,16 @@ button {
   text-transform: uppercase;
   font-weight: 400;
 }
+
+@media (min-width: 1100px) {
+  .form-container {
+    /* margin: 10px 35px 60px 35px;
+    max-width: 615px;
+    margin-bottom: 15rem; */
+    margin: 5rem 1rem 20rem 2rem;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
