--- a/src/components/header/headerStyles.css
+++ b/src/components/header/headerStyles.css
@@ -58,6 +58,10 @@
   display: none;
 }
 @media (min-width: 1100px) {
+  .header {
+    margin: 35px 55px 0 55px;
+  }
+
   .large-nav-container {
     display: block;
   }
