--- a/src/components/products/productsStyles.css
+++ b/src/components/products/productsStyles.css
@@ -98,3 +98,21 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@media (min-width: 1100px) {
+  .products-container {
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 40px;
+  }
+
+  .products-container .products-title {
+    font-size: 4rem;
+    /* font-weight: 400; */
+    /* text-transform: uppercase;
+
+    letter-spacing: 8px;
+    padding-top: 8rem;
+    padding-bottom: 2rem; */
+  }
+}
