--- a/src/components/styles/titleStyles.css
+++ b/src/components/styles/titleStyles.css
@@ -23,3 +23,21 @@
   letter-spacing: 3px;
   line-height: 30px;
 }
+
+@media (min-width: 1100px) {
+  .title-container {
+    max-width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .title-japanese h2 {
+    font-size: 4rem;
+  }
+
+  .title-bio p {
+    font-size: 1.5rem;
+    letter-spacing: 5px;
+    line-height: 35px;
+  }
+}
