--- a/src/components/contact/formStyles.css
+++ b/src/components/contact/formStyles.css
@@ -75,13 +75,22 @@ button {
 
 @media (min-width: 1100px) {
   .form-container {
-    /* margin: 10px 35px 60px 35px;
-    max-width: 615px;
-    margin-bottom: 15rem; */
-    margin: 5rem 1rem 20rem 2rem;
+    margin-top: 25rem;
     display: flex;
     flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 100px;
+  }
+
+  .form-container h1 {
+    font-size: 4rem;
+  }
+
+  label {
+    font-size: 2rem;
+    letter-spacing: 3px;
+    line-height: 30px;
+    font-weight: 500;
+    margin-top: 40px;
+    padding-bottom: 40px;
   }
 }
