--- a/src/components/footer/footerStyles.css
+++ b/src/components/footer/footerStyles.css
@@ -34,3 +34,17 @@
   margin-left: auto;
 }
 
+@media (min-width: 1100px) {
+  .footer-container h1 {
+    text-transform: uppercase;
+    font-size: 4rem;
+
+    font-weight: 400;
+    letter-spacing: 8px;
+  }
+
+  .footer-container :not(h1, .footer-email-signature) {
+    font-size: 2rem;
+    font-weight: 300;
+  }
+}
