--- a/src/components/services/servicesStyles.css
+++ b/src/components/services/servicesStyles.css
@@ -58,10 +58,7 @@
 
 @media (min-width: 1100px) {
   .services-container {
-    margin-top: 8rem;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
+    width: 100%;
     margin-bottom: 10rem;
     margin-left: 100px;
     margin-right: 100px;
