--- a/src/components/products/productsStyles.css
+++ b/src/components/products/productsStyles.css
@@ -88,6 +88,14 @@
   cursor: pointer;
 }
 
+p {
+  z-index: 9999;
+}
+
+p a {
+  color: white;
+  text-decoration: none;
+}
 .gallery__item p {
   text-transform: uppercase;
   font-size: 3vw;
