--- a/src/components/styles/titleStyles.css
+++ b/src/components/styles/titleStyles.css
@@ -1,5 +1,5 @@
 .title-container {
-  margin-top: 8rem;
+  /* margin-top: 8rem; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,14 +7,9 @@
 
 .title-japanese {
 }
-.title-japanese h2 {
-  font-size: 3rem;
-  letter-spacing: 10px;
-}
 
 .title-bio {
   padding-top: 20px;
-
   width: 70%;
 }
 
