--- a/src/components/contact/formStyles.css
+++ b/src/components/contact/formStyles.css
@@ -2,6 +2,8 @@
   margin: 10px 35px 60px 35px;
   max-width: 615px;
   margin-bottom: 15rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .form-container h1 {
@@ -71,6 +73,8 @@ button {
   letter-spacing: 3px;
   text-transform: uppercase;
   font-weight: 400;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media (min-width: 1100px) {
@@ -78,7 +82,6 @@ button {
     margin-top: 25rem;
     display: flex;
     flex-direction: column;
-    margin-left: 100px;
   }
 
   .form-container h1 {
