--- a/src/components/styles/titleStyles.css
+++ b/src/components/styles/titleStyles.css
@@ -1,5 +1,6 @@
 .title-container {
   /* margin-top: 8rem; */
+  padding-top: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
