--- a/src/styles/appStyles.css
+++ b/src/styles/appStyles.css
@@ -2,35 +2,112 @@ html,
 body {
   height: 100%;
 }
-.container {
+
+.nav {
+  display: flex;
+  justify-content: flex-start;
 }
 
-nav {
-  margin-top: 30px;
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  height: 100px;
+.sidebar-menu {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  font-size: 1.4rem;
+  letter-spacing: 3px;
 }
 
-.nav-items {
+.nav-konbini {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 400;
+  font-size: 1.4rem;
+  padding: 20px 0 0 20px;
+}
+
+.sidenav {
   position: fixed;
   display: flex;
-  justify-content: space-evenly;
+  width: 250px;
+  flex-direction: column;
+  padding-top: 60px;
+  background-color: #111;
+  height: 100%;
+  z-index: 2;
+  top: 0;
+  right: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
 }
 
-.nav-item {
+.sidenav-item {
+  padding: 8px 8px 8px 32px;
   font-size: 1.4rem;
   letter-spacing: 3px;
   font-weight: 400;
+  color: #818181;
 }
 
-.nav-item:hover {
+.sidenav-item:hover {
+  cursor: pointer;
+  color: #f1f1f1;
+}
+
+.sidebar-menu:hover {
   cursor: pointer;
 }
 
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+/* large nav */
+.largenav {
+  display: none;
+}
+
 @media (min-width: 1100px) {
-  .nav-item {
-    font-size: 1.8rem;
+  .sidebar-menu {
+    visibility: hidden;
+    /* border: 2px solid red; */
+  }
+
+  .nav {
+    display: flex;
+  }
+
+  .largenav {
+    position: fixed;
+    display: flex;
+    /* justify-content: space-around; */
+    /* padding: 35px; */
+    font-size: 1.5rem;
+    /* width: 100%; */
+    top: 35px;
+    right: 35px;
+    /* border: 2px solid red; */
+  }
+  .largenav-item {
+    margin-left: 30px;
+    transition-property: all;
+    transition-duration: 0.5ms;
+    transition-timing-function: ease-in;
+  }
+  .nav-konbini {
+    /* border: 2px solid red; */
+    font-size: 2rem;
+    padding: 35px;
+    width: auto;
+  }
+
+  .largenav-item:hover {
+    cursor: pointer;
+  }
+
+  .active {
+    border-bottom: 2px solid black;
   }
 }
