--- a/src/pages/styles/modsStyles.css
+++ b/src/pages/styles/modsStyles.css
@@ -4,6 +4,7 @@
   row-gap: 30px;
   align-items: center;
   /* border: 2px solid green; */
+  min-width: 100vw;
 }
 
 .mods-title {
@@ -26,19 +27,23 @@
   object-fit: cover;
 }
 
-.mods-img {
-  width: 100%;
-  height: 400px;
-  padding: 30px 30px 0 30px;
-}
-
 .mods-cards {
   display: flex;
   text-align: center;
   flex-direction: column;
-  /* border: 2px solid red; */
-  row-gap: 70px;
   margin-bottom: 10rem;
+}
+
+.mods-card {
+  border: 2px solid black;
+  background-color: cyan;
+  height: 400px;
+  width: 400px;
+}
+
+.mods-img {
+  width: 300px;
+  height: 300px;
 }
 
 .mods-img img {
@@ -47,46 +52,47 @@
   object-fit: cover;
 }
 
-.mods-title {
-  font-size: 1.5rem;
-  padding: 10px;
-}
-
-.mods-card p {
+.mods-name,
+.mods-price {
   font-size: 1.2rem;
-  padding: 5px;
+  padding: 0;
 }
 
 @media (min-width: 1100px) {
+  .mods-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* margin-bottom: 10rem; */
+    margin: 0 60px 0 60px;
+  }
   .mods-title {
     font-size: 3.5rem;
   }
 
-  .mods-cards {
-    flex-direction: row;
-    flex-wrap: wrap;
+  .mods-card {
+    /* flex-basis: 33.33%; */
+    display: flex;
     justify-content: center;
   }
 
-  .mods-card {
-    flex-basis: 33.33%;
-    /* display: flex; */
-  }
-
   .mods-img {
-    width: 350px;
-    height: 350px;
-    margin-left: auto;
-    margin-right: auto;
-    /* padding: 30px 30px 0 30px; */
+    padding: 0;
+
+    /* width: 400px;
+    height: 400px; */
+    /* margin-left: auto;
+    margin-right: auto; */
     /* padding: 40px; */
   }
 
-  .mods-card p {
-    font-size: 1.8rem;
-    padding: 5px;
+  .mods-img {
+    width: 300px;
+    height: 500px;
   }
 
-  .mods-border {
+  .mods-card p {
+    /* font-size: 1.8rem; */
+    /* padding: 5px; */
   }
 }
