--- a/src/pages/styles/modsStyles.css
+++ b/src/pages/styles/modsStyles.css
@@ -29,16 +29,19 @@
 
 .mods-cards {
   display: flex;
-  text-align: center;
   flex-direction: column;
   margin-bottom: 10rem;
 }
 
 .mods-card {
-  border: 2px solid black;
-  background-color: cyan;
+  /* border: 2px solid black; */
+  /* background-color: cyan; */
   height: 400px;
   width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .mods-img {
@@ -64,6 +67,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     /* margin-bottom: 10rem; */
+    justify-content: center;
     margin: 0 60px 0 60px;
   }
   .mods-title {
@@ -74,21 +78,11 @@
     /* flex-basis: 33.33%; */
     display: flex;
     justify-content: center;
+    height: 400px;
+    width: 500px;
   }
 
   .mods-img {
-    padding: 0;
-
-    /* width: 400px;
-    height: 400px; */
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* padding: 40px; */
-  }
-
-  .mods-img {
-    width: 300px;
-    height: 500px;
   }
 
   .mods-card p {
